--- a/frontend-react/package.json
+++ b/frontend-react/package.json
@@ -14,10 +14,10 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@vitejs/plugin-react": "^4.3.0",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
     "typescript": "^5.4.0",
     "vite": "^5.0.0"
   }
 }
-
